--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -80,7 +80,7 @@
         <p>This website was developed by
           &nbsp;<a href='http://github.com/PiNet'>PiNet team</a>.</p>
         <p>Follow us on Twitter:
-          &nbsp;<a href='http://github.com/PiNet'>PiNet</a></p> <!--,&nbsp;<a href='http://twitter.com/michaelklishin'>Michael Klishin</a>,&nbsp;<a href='http://twitter.com/ifesdjeen'>Alex P</a></p> -->
+          &nbsp;<a href='https://twitter.com/pinetdev'>PiNetDev</a></p>
           <p>Website artwork by <a href='http://www.andyhunt.com/'>Andy Hunt</a>, it should not be copied or reproduced without prior consent</p>
       </footer>
     </div>
