Fixed Amy Mather link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -75,7 +75,7 @@
           &nbsp;<a href='http://github.com/PiNet'>PiNet team</a>.</p>
         <p>Follow us on Twitter:
           &nbsp;<a href='https://twitter.com/pinetdev'>@PiNetDev</a></p>        
-        <p>Website header artwork by <a href='http://www.andyhunt.com/'>Andy Hunt</a> and PiNet logo by <a href='https://twitter.com/MiniGirlGeek'>Amy Mather</a>. Neither should not be copied or reproduced without prior consent.</p>
+        <p>Website header artwork by <a href='http://www.andyhunt.com/'>Andy Hunt</a> and PiNet logo by <a href='https://about.me/minigirlgeek'>Amy Mather</a>. Neither should not be copied or reproduced without prior consent.</p>
       </footer>
     </div>
   </body>
