Added new PiNet blog

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -63,6 +63,9 @@
               <li>
                 <a href='/articles/faq.html'>FAQ</a>
               </li>
+              <li>
+                <a href='/blog/bloglist.html'>Blog</a>
+              </li>
             </ul>
           </div>
         </div>
