--- a/_layouts/blogList.html
+++ b/_layouts/blogList.html
@@ -104,7 +104,7 @@
           &nbsp;<a href='http://github.com/PiNet'>PiNet team</a>.</p>
         <p>Follow us on Twitter:
           &nbsp;<a href='https://twitter.com/pinetdev'>@PiNetDev</a></p>
-          <p>Website header artwork by <a href='http://www.andyhunt.com/'>Andy Hunt</a> should be copied or reproduced without prior consent. The PiNet logo by <a href='https://about.me/minigirlgeek'>Amy Mather</a> is released under <a href='http://creativecommons.org/licenses/by-sa/4.0/'>Creative Commons BY-SA 4.0.</a></p>
+          <p>Website header artwork by <a href='http://www.andyhunt.com/'>Andy Hunt</a> should not be copied or reproduced without prior consent. The PiNet logo by <a href='https://about.me/minigirlgeek'>Amy Mather</a> is released under <a href='http://creativecommons.org/licenses/by-sa/4.0/'>Creative Commons BY-SA 4.0.</a></p>
       </footer>
     </div>
   </body>
