Add proper recognition to John Lemieux for PiNet background image.

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -85,6 +85,7 @@
         <p>Follow us on Twitter:
           &nbsp;<a href='https://twitter.com/pinetdev'>@PiNetDev</a></p>
           <p>Website header artwork by <a href='http://www.andyhunt.com/'>Andy Hunt</a> should not be copied or reproduced without prior consent. The PiNet logo by <a href='https://about.me/minigirlgeek'>Amy Mather</a> is released under <a href='http://creativecommons.org/licenses/by-sa/4.0/'>Creative Commons BY-SA 4.0.</a></p>
+          <p>PiNet starry night desktop background by <a href='https://www.flickr.com/photos/21051229@N06/7108632527'>John Lemieux</a> is released under <a href='https://creativecommons.org/licenses/by-nc/2.0/'>Creative Commons BY-NC 2.0.</a></p>
       </footer>
     </div>
   </body>
