Add PiNet EOL announcement

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-31267936-1']);
         _gaq.push(['_trackPageview']);
-  
+
         (function() {
         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
@@ -72,12 +72,15 @@
       </div>
     </div>
     <div class='container'>
+      <div class="alert alert-danger" role="alert">
+    Unfortunately PiNet is no longer maintained. For more information, please see <a href="/blog/2020/10/27/PiNet-end-of-life.html" class="alert-link">here</a>.
+      </div>
       {{ content }}
       <footer class='footer'>
         <p>This website was developed by the
           &nbsp;<a href='http://github.com/PiNet'>PiNet team</a>.</p>
         <p>Follow us on Twitter:
-          &nbsp;<a href='https://twitter.com/pinetdev'>@PiNetDev</a></p>        
+          &nbsp;<a href='https://twitter.com/pinetdev'>@PiNetDev</a></p>
         <p>Website header artwork by <a href='http://www.andyhunt.com/'>Andy Hunt</a> should not be copied or reproduced without prior consent. The PiNet logo by <a href='https://about.me/minigirlgeek'>Amy Mather</a> is released under <a href='http://creativecommons.org/licenses/by-sa/4.0/'>Creative Commons BY-SA 4.0.</a></p>
         <p>PiNet starry night desktop background by <a href='https://www.flickr.com/photos/21051229@N06/7108632527'>John Lemieux</a> is released under <a href='https://creativecommons.org/licenses/by-nc/2.0/'>Creative Commons BY-NC 2.0.</a></p>
       </footer>
