--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -18,7 +18,7 @@
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-31267936-1']);
         _gaq.push(['_trackPageview']);
-  
+
         (function() {
         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
@@ -77,6 +77,9 @@
           <div class='well sidebar-nav'></div>
         </div>
         <div class='span9'>
+          <div class="alert alert-danger" role="alert">
+        Unfortunately PiNet is no longer maintained. For more information, please see <a href="/blog/2020/10/27/PiNet-end-of-life.html" class="alert-link">here</a>.
+          </div>
           {{ content }}
         </div>
       <footer class='footer article'>
