--- a/_layouts/blogList.html
+++ b/_layouts/blogList.html
@@ -18,7 +18,7 @@
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-31267936-1']);
         _gaq.push(['_trackPageview']);
-  
+
         (function() {
         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
@@ -76,13 +76,16 @@
         <div class='span3'>
         </div>
         <div class='span9'>
+          <div class="alert alert-danger" role="alert">
+        Unfortunately PiNet is no longer maintained. For more information, please see <a href="/blog/2020/10/27/PiNet-end-of-life.html" class="alert-link">here</a>.
+          </div>
           <h1>{{ page.title }}</h1>
           <p></p>
           <img src="../assets/images/PiNet-Jam-1-small.jpg" alt="PiNet";">
           <p></p>
-          
+
           <h1>Posts</h1>
-          
+
 <ul id="archive">
 {% for post in site.posts %}
   <li class="post-{{ post.category }}">
@@ -97,7 +100,7 @@
 </ul>
           <hr/>
         </div>
-        
+
       <footer class='footer article'>
         <HR>
         <p>This website was developed by
